# rubikCube

./: .gitignore  CMakeLists.txt  README.md
3d_module/: README.md
3d_module/Assets/Materials/: Blue.mat  Green.mat  Orange.mat  Red.mat  Yellow.mat
3d_module/Assets/Materials/Materials/: background.mat
3d_module/Assets/Prefabs/: B.prefab  G.prefab  O.prefab  R.prefab  SmallCube.prefab  W.prefab  Y.prefab
3d_module/Assets/Scenes/: MainScene.unity
3d_module/Assets/Scripts/: BackBtnController.cs  CubeController.cs  DownBtnController.cs  FrontBtnController.cs  LeftBtnController.cs  RightBtnController.cs  UpBtnController.cs
3d_module/ProjectSettings/: ProjectSettings.asset  TagManager.asset
data/: colorParamsDn.xml  colorParamsUp.xml
exec/: colorDisp.cpp  colorTool.cpp  disorganize.cpp  enableAndDisable.cpp  readColor.cpp  simulate.cpp  solveCube.cpp  solveCubeManually.cpp  stimulate.cpp
include/: RubikCube.h  colorRecog.h  control.h
src/: Motor.cpp  RubikCube.cpp  colorRecog.cpp  control.cpp
